Can not save image as external on a writable path #29062

Closed
opened 2011-10-27 22:52:56 +02:00 by Julien Duroure · 7 comments
Member

%%%Hello,

Here is the way to reproduce this bug :

  • go to UV/image editor
  • create new image
  • save blend file in /tmp/test.blend ( this file is attached on this ticket )
  • save image ( F3 ) in same directory : /tmp/image.png
  • enable image painting mode
  • modify image ( painting white on default black image )
  • When I want to save image ( alt+S ) --> Error message " Can not save image, path '//image.png' is not writable

On official 2.60a, linux 64 bits

Don't hesitate to contact me for any information.%%%

%%%Hello, Here is the way to reproduce this bug : * go to UV/image editor * create new image * save blend file in /tmp/test.blend ( this file is attached on this ticket ) * save image ( F3 ) in same directory : /tmp/image.png * enable image painting mode * modify image ( painting white on default black image ) * When I want to save image ( alt+S ) --> Error message " Can not save image, path '//image.png' is not writable On official 2.60a, linux 64 bits Don't hesitate to contact me for any information.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%I had the same problem with rendered images. Only Save As helps.

win 32 bit, r41116%%%

%%%I had the same problem with rendered images. Only Save As helps. win 32 bit, r41116%%%

%%%fixed r41328.%%%

%%%fixed r41328.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Checking this report and it seems to be working now.

Now print when save succeeds.
7829ef0051

Checking this report and it seems to be working now. Now print when save succeeds. 7829ef0051
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29062
No description provided.