fix [#29062] Can not save image as external on a writable path